--- a/Lab4/src/main/resources/application.properties
+++ b/Lab4/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=postgres
-spring.datasource.password=xbs712
+spring.datasource.password=psl092
 spring.jpa.generate-ddl=true
